# probabilistic-pipeline-demo

./: .gitignore  README.md  pyproject.toml
demo/: __init__.py  mock_data.py  outcomes.jsonl  run_demo.py  sample_payload_high.json  sample_payload_medium.json  traffic.py  ui.py
demo/synthetic/: mock_payload_0.json  mock_payload_1.json  mock_payload_2.json
demo/traffic/: response_mock_payload_0.json  response_mock_payload_1.json  response_mock_payload_2.json
docs/: architecture.md  data-model.md  feedback.md  inference-rules.md  presentation.md  roadmap.md
docs/adr/: 0001-probabilistic-pipeline.md
src/prob_pipeline/: __init__.py  api.py  cli.py  core.py  enricher.py  models.py  persistence.py  router.py
tests/: test_core.py  test_enricher.py  test_persistence.py
